# Otus-HW_01

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yaml
app/: config.py  exceptions.py  server.py
app/apps/api/: __init__.py  auth.py  ping.py  utils.py
app/apps/api/v1/: __init__.py  dialog.py  friend.py  login.py  posts.py  user.py
app/apps/consumers/: __init__.py  cache_feed_consumer.py
app/core/: consts.py  enums.py  utils.py
app/core/clients/: __init__.py
app/core/clients/db/: __init__.py  base.py  postgres.py  redis.py
app/core/clients/kafka/: __init__.py
app/core/clients/kafka/consumer/: __init__.py  base.py  exceptions.py
app/core/clients/kafka/producer/: __init__.py  aio_producer.py  base.py  exceptions.py
app/core/containers/: __init__.py  context.py
app/core/repositories/: __init__.py  unit_of_work.py
app/core/repositories/repos/: __init__.py  base.py  conversations.py  messages.py  publications.py  schemas.py  token.py  user.py
app/core/services/: __init__.py  base.py  utils.py
app/core/services/auth/: __init__.py  service.py  utils.py
app/core/services/dialogs/: __init__.py  service.py  utils.py
app/core/services/post/: __init__.py  service.py  utils.py
app/core/services/user/: __init__.py  service.py  utils.py
app/schemas/: base.py  types.py
app/schemas/api/: __init__.py  dialogs.py
app/schemas/dto/: __init__.py  conversation.py  messages.py  publications.py  token.py  user.py
app/schemas/services/: __init__.py  auth.py  base.py  dialogs.py  events.py  post.py  user.py
docs/: openapi.json
docs/postman/: Otus_socal.postman_collection.json
infra/: docker-compose.yml
migrations/: env.py
migrations/versions/: 2026-02-28_1_init.py  2026-03-28_1_add_gin_indexes.py  2026-04-18_1_add_friends_and_post.py  2026-04-26_1_add_users_dialog.py  baa69dfdc4fe_.py
test_infra/: docker-compose.db-replica.yaml  docker-compose.yaml
test_infra/patroni/: Dockerfile.patroni  haproxy.cfg  patroni1.yaml  patroni2.yaml  patroni3.yaml
test_infra/scripts/: generate_users.py  load_read_users.js  load_search_users.js
tests/: conftest.py
tests/api/: test_dialog.py  test_friend_post.py  test_login.py  test_user.py
tests/consumers/: test_cache_feed_consumer.py
tests/core/: test_db_client.py
tests/fixtures/: instances.py  mock_objects.py
tests/fixtures/mock_types/: __init__.py  kakfa.py
tests/service/: test_auth.py  test_dialogs.py  test_post.py  test_post_feed_cache_service.py  test_user_service.py
