[project]
name = "otus-social-network"
version = "0.1.0"
description = "Social network homework"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.5",
    "fastapi>=0.134.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "python-json-logger>=4.0.0",
]

[dependency-groups]
dev = [
    "faker>=40.5.1",
    "freezegun>=1.5.5",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
